--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
 		<h3>Source</h3>
 
-    	<p>The online version of the thesis is available <a href="https://github.com/berb/diploma-thesis/tree/gh-pages">on GitHub</a>. Feel free to fork the project, in case you want to copy, improve, extend or correct any content. I also welcome push requests for the community version of the work.</p>
+    	<p>The online version of the thesis is available <a href="https://github.com/berb/diploma-thesis/tree/gh-pages">on GitHub</a>. Feel free to fork the project, in case you want to copy, improve, extend or correct any content. I also welcome pull requests for the community version of the work.</p>
     	
     </div>
 
