added print version. this is it.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 </div>
 
+<!--
 <div class="blocks">
 
   <div class="span1">
@@ -27,9 +28,9 @@
   </div>
 
 </div>
-      
+-->      
 
-<!--
+
 <div class="editions">
 
   <div class="span8">
@@ -42,7 +43,7 @@
 
           <ul>
 
-            <li><a href="#">Original Thesis (12 MB)</a><br>(released under <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/de/">CC-BY-NC-SA 3.0</a>)</li>        
+            <li><a href="print/erb_thesis.pdf">Original Thesis (12.2 MB)</a><br>(released under <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/de/">CC-BY-NC-SA 3.0</a>)</li>        
 
           </ul>
 
@@ -56,8 +57,8 @@
 
         <div class="span8 last">
 
-          <p>Read it or help working on it in&hellip;
-
+          <p>Read it or help working on it&hellip;
+<!--
                   <ul>
 
             <li><a href="original/index.html">Original Thesis</a></li>
@@ -65,7 +66,8 @@
             <li><a href="community/index.html">Community Version</a></li>
 
           </ul>
-
+-->
+			<p>Online version will be released soon!</p>
         </div>
 
       </div>
@@ -85,7 +87,7 @@
 
 </div>
 
--->
+
 
 <div class="blocks">
 
