initial content commit

--- a/original/0_preface.html
+++ b/original/0_preface.html
@@ -4,9 +4,7 @@
 
 <link rel="stylesheet" href="../style.css">
 
-<!--
-<link rel="prev" href=""> 
--->
+<link rel="prev" href="index.html"> 
 <link rel="next" href="011_motivation.html"> 
 
 
