--- a/community/index.html
+++ b/community/index.html
@@ -86,6 +86,9 @@
 
 <h3 id="appendix">Appendix</h3>
 
-<h4><a href="0_bibliography.html">Bibliography </a></h4>
+<h4><a href="0_bibliography.html">Bibliography</a></h4>
+
+<h4><a href="0_license.html">License</a></h4>
+<h4><a href="0_contributors.html">Authors and Contributors</a></h4>
 
 
