--- a/original/index.html
+++ b/original/index.html
@@ -86,6 +86,8 @@
 
 <h3 id="appendix">Appendix</h3>
 
-<h4><a href="0_bibliography.html">Bibliography </a></h4>
+<h4><a href="0_bibliography.html">Bibliography</a></h4>
+
+<h4><a href="0_license.html">License</a></h4>
 
 
