--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 
 	<p>I am <a href="http://www.benjamin-erb.de">Benjamin Erb</a> and this is my diploma thesis I wrote in 2011/2012 as a requirement for the completion of my diploma course <a href="http://www.uni-ulm.de/in/fakultaet/studiengaenge.html">Media Informatics</a> at <a href="http://www.uni-ulm.de/">Ulm University</a>. I have decided to publish this thesis under a Creative Commons license and release it to the general public. Please also see the alongside license notes for details.</p>
-      <p>If you want to cite the original thesis, you can use the following BibTeX entry:</p>
+      <p>If you want to cite the original thesis, you can use the following <a href="erb_thesis.bib">BibTeX entry</a>:</p>
             <pre>
 @MASTERSTHESIS{Erb2012,
   author = {Benjamin Erb},
