--- a/community/021_www.html
+++ b/community/021_www.html
@@ -315,6 +315,6 @@ This is especially interesting for real-time web applications.</p>
  HREF="0_bibliography.html#RFC4627">Cro06</A>].
 XML is a comprehensive markup language providing a rich family of related technologies, like validation, transformation or querying.
 JSON is one of the leightweight alternatives that focuses solely on the succinct representation of structured data.
-While there is an increasing interest in leightweight formats for web services and messages, XML provides still the most extensive
+While there is an increasing interest in lightweight formats for web services and messages, XML provides still the most extensive
 tool set and support.</p>
 
