Removed misleading usage of term 'federated systems' (thanks to Steven D.)

--- a/community/011_motivation.html
+++ b/community/011_motivation.html
@@ -45,7 +45,7 @@ allowed the development of larger and more reliable applications without using p
 <P>
 The arrival of networking was also the beginning of a new kind of
 computing. Distributed applications not just take advantage of the
-resources of multiple machines, they also allow the existence of federated systems that consist
+resources of multiple machines, they also allow the existence of interconnected systems that consist
 of multiple machines remotely located. It promptly became apparent that
 in order to support such systems, additional software on top of a network operating system was necessary.
 Others favored a distributed operating system which provided a high degree of transparency
