Added G+ contact hint

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 
       <p>I am interested in your feedback, your thoughts and your ideas!</p>
       <p>Feel free to <a href="http://www.benjamin-erb.de/#contact">contact me</a> 
-      or get in touch with me on Twitter:</p>
-      <p><a href="https://twitter.com/b_erb" class="twitter-follow-button" data-show-count="false" data-size="large">@b_erb</a></p>
+      or get in touch with me on Twitter/Google+:</p>
+      <p><a href="https://twitter.com/b_erb" class="twitter-follow-button" data-show-count="false" data-size="large">@b_erb</a> | <a rel="author" href="https://plus.google.com/111191895515210271225">+Benjamin Erb</a></p>
 
       
     </div>
