--- a/community/091_archtrends.html
+++ b/community/091_archtrends.html
@@ -217,7 +217,7 @@ The fact that hundreds of machines of a web architecture may work together for r
 
 <p class="caption">Table 9.1: Common operations and their average latencies. Note that these numbers are exemplary
 and platform dependent. Yet, they give a rough round-up on the impact of different operations.
-Source: <a href="http://stanford-online.stanford.edu/courses/ee380/101110-ee380-300.asx">Talk "Building Software Systems at Google and Lessons Learned"</a> by Jeffrey Dean (Google) at Standford.</p>
+Source: <a href="http://stanford-online.stanford.edu/courses/ee380/101110-ee380-300.asx">Talk "Building Software Systems at Google and Lessons Learned"</a> by Jeffrey Dean (Google) at Stanford.</p>
 
 </div>
 
