--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <script src="script.js"></script>
 
+<a href="https://github.com/berb/diploma-thesis"><img style="position: absolute; top: 0; left: 16; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
+
 
 <div class="stage home">
 
@@ -16,20 +18,7 @@
 
 </div>
 
-<!--
-<div class="blocks">
-
-  <div class="span1">
-
-    <div class="inner">
-
-      <h3>Please be patient,  will be released soon.</h3>
-    </div>
-
-  </div>
-
-</div>
--->      
+   
 
 
 <div class="editions">
@@ -179,5 +168,6 @@
   </div>
 
 </div>
+
 
 
