--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
         <div class="span8 last">
 
           <ul>
-
-            <li><a href="print/erb_thesis.pdf">Original Thesis (12 MB)</a><br>(released under <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/de/">CC-BY-NC-SA 3.0</a>)</li>        
-
+            <li><a href="print/erb_thesis.pdf">Original Thesis</a> – 5 MB (CC-BY-SA)<br/></li>        
+          </ul> 
+          
+           <ul>
+            <li><a href="print/erb_thesis_cover.pdf">Cover Page</a> – 7 MB (CC-BY-SA-NC)</a></li>        
           </ul>
 
         </div>
@@ -111,9 +113,8 @@
 
       <h3>License</h3>
 
-		<p>The entire online thesis as well as all illustrations are released under a <a href="http://creativecommons.org/licenses/by/3.0/de/">Creative Commons Attribution</a> license. That means you're free to share and distribute the work however you like. You are also free to remix and adapt the work as long as you attribute the work properly.</p> 
-		<p>The print version is available under a
-		<a href="http://creativecommons.org/licenses/by-nc-sa/3.0/de/">Creative Commons Attribution-NonCommercial-ShareAlike</a> license, as it incorporates additional material on the cover.</p>
+		<p>The entire thesis including all illustrations are released under a <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons  Attribution-ShareAlike</a> license. That means you're free to share and distribute the work however you like. You are also free to remix and adapt the work as long as you attribute the work properly and use the same/similar license to this one.</p> 
+		<p>The cover page of the print version is available under a <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike</a> license.</p>
 
 
     </div>
