--- a/original/0_license.html
+++ b/original/0_license.html
@@ -9,8 +9,8 @@
 
 <h2 id="lic">License</h2>
 
-<p>This work is licensed under a Creative Commons Attribution 3.0 Unported. To view a copy
-of this license, visit <a href="http://creativecommons.org/licenses/by/3.0/de/">http://creativecommons.org/licenses/by/3.0/de/</a> or send a letter to Creative Commons, 171
+<p>This work is licensed under a Creative Commons Attribution-ShareAlike 3.0 Unported. To view a copy
+of this license, visit <a href="http://creativecommons.org/licenses/by-sa/3.0/">http://creativecommons.org/licenses/by-sa/3.0/</a> or send a letter to Creative Commons, 171
 Second Street, Suite 300, San Francisco, California, 94105, USA.</p>
 
 <h3 id="iconsets">Icon Sets</h3>
