fixed another typo: Egnine => Engine

--- a/community/033_archmodel.html
+++ b/community/033_archmodel.html
@@ -259,7 +259,7 @@ are typical representatives of scalable, non-relational database management syst
 
 <P>
 
-<SPAN  CLASS="textit">Cloud-based examples:</SPAN> The Google App Egnine provides both a data store and a blob store. Amazon has come up with several different
+<SPAN  CLASS="textit">Cloud-based examples:</SPAN> The Google App Engine provides both a data store and a blob store. Amazon has come up with several different
 solutions for cloud-based data storage (e.g. RDS, DynamoDB, SimpleDB) and file storage (e.g. S3).      
 <BR>
 <BR>
