Changed permanent link of original thesis (PDF version)

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="span8 last">
 
           <ul>
-            <li><a href="print/erb_thesis.pdf">Original Thesis</a> – 5 MB (CC-BY-SA)<br/></li>        
+            <li><a href="http://vts.uni-ulm.de/docs/2012/8082/vts_8082_11772.pdf">Original Thesis</a> – 5 MB (CC-BY-SA)<br/></li>        
           </ul> 
           
            <ul>
