--- a/original/023_concurrency.html
+++ b/original/023_concurrency.html
@@ -260,7 +260,7 @@ Operating systems generally provide different types of tasks--processes and
 threads. Essentially, they represent different task granularities. A
 <SPAN  CLASS="textit">process</SPAN> is a heavyweight task unit and owns system resources
 such as memory and file descriptors that are allocated from the operating system.
-<SPAN  CLASS="textit">Threads</SPAN> are leightweight task units that belong to a certain process.
+<SPAN  CLASS="textit">Threads</SPAN> are lightweight task units that belong to a certain process.
 All threads allocated within the same process share memory, file descriptors and
 other related resources. Creating threads is a relatively cheap operation
 compared to the creation of new processes.
